info_TEXINFOS = gama.texi

gama_TEXINFOS =           \
   algorithms.texi        \
   class-g3-model.texi    \
   ellipsoids-1.texi      \
   ellipsoids.texi        \
   fdl.texi               \
   gama-download.texi     \
   gama-g3.texi           \
   gama-install.texi      \
   gama-local-adj.texi    \
   gama-local-macros.texi \
   gama-local.texi        \
   gama-versions.texi     \
   gama-xml-input.texi    \
   obsdata.texi           \
   version.texi	          \
   xyz2blh.texi

#gama_TEXINFOS = gpl.texi
