info_TEXINFOS = gama.texi

gama_TEXINFOS =           \
   algorithms.texi        \
   class-g3-model.texi    \
   ellipsoids-1.texi      \
   ellipsoids.texi        \
   fdl.texi               \
   gama-download.texi     \
   gama-g3.texi           \
   gama-install.texi      \
   gama-local-adj.texi    \
   gama-local-macros.texi \
   gama-local.texi        \
   gama-versions.texi     \
   gama-local-input.texi  \
   obsdata.texi           \
   version.texi	          \
   xyz2blh.texi

#gama_TEXINFOS = gpl.texi

EXTRA_DIST =                    \
   gama-local-adj-ellipse-g.eps \
   gama-local-adj-ellipse-g.pdf	\
   gama-local-adj-ellipse-g.png	\
   gama-local-adj-ellipse-g.txt	\
   gama-local-input-example.eps	\
   gama-local-input-example.fig	\
   gama-local-input-example.pdf	\
   gama-local-input-example.png	\
   gama-local-input-example.txt	\
   obsdata-fig.eps		\
   obsdata-fig.fig		\
   obsdata-fig.pdf		\
   obsdata-fig.png		\
   obsdata-fig.txt		\
   xyz2blh-fig.eps		\
   xyz2blh-fig.fig		\
   xyz2blh-fig.pdf		\
   xyz2blh-fig.png		\
   xyz2blh-fig.txt              
