libgama_src = \
   gnu_gama/e3.cpp \
   gnu_gama/e3.h \
   gnu_gama/ellipsoid.cpp \
   gnu_gama/ellipsoid.h \
   gnu_gama/ellipsoids.cpp \
   gnu_gama/ellipsoids.h \
   gnu_gama/exception.h \
   gnu_gama/gon2deg.cpp \
   gnu_gama/gon2deg.h \
   gnu_gama/intfloat.h \
   gnu_gama/latlong.cpp \
   gnu_gama/latlong.h \
   gnu_gama/list.h \
   gnu_gama/model.h \
   gnu_gama/obsdata.h \
   gnu_gama/outstream.cpp \
   gnu_gama/outstream.h \
   gnu_gama/pointbase.h \
   gnu_gama/radian.h \
   gnu_gama/rand.cpp \
   gnu_gama/rand.h \
   gnu_gama/statan.cpp \
   gnu_gama/statan.h \
   gnu_gama/version.cpp \
   gnu_gama/version.h \
   gnu_gama/xml_expat.h \
   gnu_gama/adj/adj_base.h \
   gnu_gama/adj/adj_chol.h \
   gnu_gama/adj/adj_chol_implementation.h \
   gnu_gama/adj/adj.cpp \
   gnu_gama/adj/adj_gso.h \
   gnu_gama/adj/adj.h \
   gnu_gama/adj/adj_svd.h \
   gnu_gama/g3/g3_cluster.cpp \
   gnu_gama/g3/g3_cluster.h \
   gnu_gama/g3/g3_model.cpp \
   gnu_gama/g3/g3_model.h \
   gnu_gama/g3/g3_model_init.cpp \
   gnu_gama/g3/g3_model_linearization.cpp \
   gnu_gama/g3/g3_model_revision.cpp \
   gnu_gama/g3/g3_model_write_xml_adjustment_results.cpp \
   gnu_gama/g3/g3_observation.h \
   gnu_gama/g3/g3_parameter.h \
   gnu_gama/g3/g3_point.cpp \
   gnu_gama/g3/g3_point.h \
   gnu_gama/g3/g3_write_observation_xml.cpp \
   gnu_gama/g3/g3_write_observation_xml.h \
   gnu_gama/sparse/intlist.h \
   gnu_gama/sparse/sbdiagonal.h \
   gnu_gama/sparse/smatrix_graph_connected.h \
   gnu_gama/sparse/smatrix_graph.h \
   gnu_gama/sparse/smatrix.h \
   gnu_gama/sparse/svector.h \
   gnu_gama/xml/baseparser.cpp \
   gnu_gama/xml/baseparser.h \
   gnu_gama/xml/dataobject.cpp \
   gnu_gama/xml/dataobject.h \
   gnu_gama/xml/dataparser_adj.cpp \
   gnu_gama/xml/dataparser.cpp \
   gnu_gama/xml/dataparser_g3.cpp \
   gnu_gama/xml/dataparser.h \
   gnu_gama/xml/encoding_cp1251.cpp \
   gnu_gama/xml/encoding.cpp \
   gnu_gama/xml/encoding.h \
   gnu_gama/xml/encoding_unknown_handler.cpp \
   gnu_gama/xml/localnetwork.cpp \
   gnu_gama/xml/localnetwork.h \
   gnu_gama/xml/localnetwork_adjustment_results.cpp \
   gnu_gama/xml/localnetwork_adjustment_results.h \
   gamalib/angobs.h \
   gamalib/bpoint.h \
   gamalib/c/api/capi_exception.cpp \
   gamalib/c/api/capi_exception.h \
   gamalib/c/api/capi_gkfparser.cpp \
   gamalib/c/api/capi_gkfparser.h \
   gamalib/c/api/capi_locnet.cpp \
   gamalib/c/api/capi_locnet.h \
   gamalib/c/api/capi_output_file.cpp \
   gamalib/c/api/capi_output_file.h \
   gamalib/c/api/capi_private_exception.h \
   gamalib/c_api.h \
   gamalib/cluster.h \
   gamalib/exception.h \
   gamalib/float.h \
   gamalib/itstream.h \
   gamalib/language.cpp \
   gamalib/language.h \
   gamalib/linearization.h \
   gamalib/local/acord/approx_heights.cpp \
   gamalib/local/acord/approx_heights.h \
   gamalib/local/acord/approx_vectors.cpp \
   gamalib/local/acord/approx_vectors.h \
   gamalib/local/acord.cpp \
   gamalib/local/acord.h \
   gamalib/local/acord/reduce_observations.cpp \
   gamalib/local/acord/reduce_observations.h \
   gamalib/local/acord/reduce_to_ellipsoid.cpp \
   gamalib/local/acord/reduce_to_ellipsoid.h \
   gamalib/local/gamadata.h \
   gamalib/local/lcoords.h \
   gamalib/local/linearization/angle.h \
   gamalib/local/linearization/direction.h \
   gamalib/local/linearization/distance.h \
   gamalib/local/linearization.h \
   gamalib/local/linearization/hdiff.h \
   gamalib/local/linearization/sdistance.h \
   gamalib/local/linearization/xyzdiff.h \
   gamalib/local/linearization/xyz.h \
   gamalib/local/linearization/zangle.h \
   gamalib/local/lpoint.h \
   gamalib/local/median/g2d_cogo.cpp \
   gamalib/local/median/g2d_cogo.h \
   gamalib/local/median/g2d_coordinates.cpp \
   gamalib/local/median/g2d_coordinates.h \
   gamalib/local/median/g2d_exception.h \
   gamalib/local/median/g2d_helper.cpp \
   gamalib/local/median/g2d_helper.h \
   gamalib/local/median/g2d_point.cpp \
   gamalib/local/median/g2d_point.h \
   gamalib/local/network_chol.h \
   gamalib/local/network.cpp \
   gamalib/local/network_gso.h \
   gamalib/local/network.h \
   gamalib/local/network_svd.h \
   gamalib/local/observation_local.cpp \
   gamalib/local/orientation.cpp \
   gamalib/local/orientation.h \
   gamalib/local/pobs/bearing.h \
   gamalib/local/pobs/format.cpp \
   gamalib/local/pobs/format.h \
   gamalib/local/pobs/write.cpp \
   gamalib/local/results/text/adjusted_observations.h \
   gamalib/local/results/text/adjusted_unknowns.h \
   gamalib/local/results/text/approximate_coordinates.h \
   gamalib/local/results/text/error_ellipses.h \
   gamalib/local/results/text/fixed_points.h \
   gamalib/local/results/text/general_parameters.h \
   gamalib/local/results/text/network_description.h \
   gamalib/local/results/text/outlying_abs_terms.h \
   gamalib/local/results/text/reduced_observations.h \
   gamalib/local/results/text/reduced_observations_to_ellipsoid.h \
   gamalib/local/results/text/residuals_observations.h \
   gamalib/local/results/text/test_linearization.h \
   gamalib/local/results/text/underline.cpp \
   gamalib/local/results/text/underline.h \
   gamalib/local/revision/angle.h \
   gamalib/local/revision/direction.h \
   gamalib/local/revision/distance.h \
   gamalib/local/revision.h \
   gamalib/local/revision/hdiff.h \
   gamalib/local/revision/sdistance.h \
   gamalib/local/revision/xyzdiff.h \
   gamalib/local/revision/xyz.h \
   gamalib/local/revision/zangle.h \
   gamalib/matvec.h \
   gamalib/medianf.h \
   gamalib/observation.cpp \
   gamalib/observation.h \
   gamalib/observation/write/angle.cpp \
   gamalib/observation/write/direction.cpp \
   gamalib/observation/write/distance.cpp \
   gamalib/observation/write/hdiff.cpp \
   gamalib/observation/write/sdistance.cpp \
   gamalib/observation/write/xyz.cpp \
   gamalib/observation/write/xyzdiff.cpp \
   gamalib/observation/write/zangle.cpp \
   gamalib/pointid.cpp \
   gamalib/pointid.h \
   gamalib/readsabw.h \
   gamalib/revision.h \
   gamalib/skipcomm.cpp \
   gamalib/skipcomm.h \
   gamalib/xml/gkfparser.cpp \
   gamalib/xml/gkfparser.h 

matvec_src = \
   matvec/array.h \
   matvec/bandmat.h \
   matvec/choldec.h \
   matvec/covmat.h \
   matvec/gso.h \
   matvec/hilbert.h \
   matvec/inderr.h \
   matvec/jacobian.h \
   matvec/matbase.h \
   matvec/mat.h \
   matvec/matvecbase.h \
   matvec/matvec.h \
   matvec/memrep.h \
   matvec/pinv.h \
   matvec/sortvec.h \
   matvec/svd.h \
   matvec/symmat.h \
   matvec/transmat.h \
   matvec/transvec.h \
   matvec/vecbase.h \
   matvec/vec.h

matvec_extra = \
   matvec/COPYING \
   matvec/README \
   matvec/imtql1.for.gz \
   matvec/svd.for.gz

expat_src = \
   expat/xmltok/xmltok.c \
   expat/xmltok/xmlrole.c \
   expat/xmlwf/codepage.c \
   expat/xmlparse/xmlparse.c \
   expat/xmlparse/hashtable.c 

expat_extra = \
   expat/Makefile \
   expat/xmlwf/filemap.h \
   expat/xmlwf/xmlwf.c \
   expat/xmlwf/xmltchar.h \
   expat/xmlwf/codepage.h \
   expat/xmlwf/win32filemap.c \
   expat/xmlwf/unixfilemap.c \
   expat/xmlwf/xmlfile.c \
   expat/xmlwf/xmlfile.h \
   expat/xmlwf/readfilemap.c \
   expat/README \
   expat/gennmtab/gennmtab.c \
   expat/sample/elements.c \
   expat/xmltok/latin1tab.h \
   expat/xmltok/asciitab.h \
   expat/xmltok/xmltok_ns.c \
   expat/xmltok/iasciitab.h \
   expat/xmltok/dllmain.c \
   expat/xmltok/xmldef.h \
   expat/xmltok/xmltok.h \
   expat/xmltok/utf8tab.h \
   expat/xmltok/xmltok_impl.c \
   expat/xmltok/xmltok_impl.h \
   expat/xmltok/xmlrole.h \
   expat/xmltok/nametab.h \
   expat/expat.html \
   expat/xmlparse/hashtable.h \
   expat/xmlparse/xmlparse.h 

noinst_LIBRARIES  = libgama.a
libgama_a_SOURCES = $(libgama_src) $(matvec_src)

EXTRA_DIST = $(expat_src) $(expat_extra) $(matvec_extra)

